added back the dialog thingimaggigs and sending back the ArrayList of selected RecipientIds to the conversation activity